refactor project structure

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = update
 
-server.servlet.context-path=/football-turf-service
+server.servlet.context-path=/api
 
 jwt.secret=football-turf
 jwt.jwtExpirationInMs=18000000
